# llm_manager

./: .gitignore  GUI_FLOW_DIAGRAM.md  MENU_SYSTEM.md  PANE_NAVIGATION.md  README.md  TERMINAL_CLEANUP.md  pyproject.toml
docs/: PROJECT_REQUIREMENTS.md  QUICKSTART.md  TESTING.md
src/llm_manager/: __init__.py  __main__.py  main.py
src/llm_manager/core/: __init__.py  conversation.py  llm_client.py  models.py  persistence.py  settings.py
src/llm_manager/gui/: __init__.py  confirmation_screen.py  help_screen.py  llm_pane.py  main_window.py  menu.py  pane.py  prompt_manager_screen.py  response_pane.py  root_pane.py
src/llm_manager/utils/: __init__.py
tests/: __init__.py  cleanup_terminal.sh  run_all_tests.sh  test_conversation.py  test_edit_mode.exp  test_edit_mode_comprehensive.py  test_integration.py  test_live_api.py  test_llm_selection.py  test_menu.py  test_navigation_full.exp  test_nvim_integration.exp  test_pane_management.py  test_pane_management_manual.py  test_persistence.py  test_persistence_manual.py  test_settings.py  test_tui.exp
